# supertux-tool

./: .gitignore  README.md  flake.nix  pyproject.toml
supertux/: cmd_tool.py
